Fix border-radius for loader wrap

--- a/public/style.css
+++ b/public/style.css
@@ -169,6 +169,7 @@ hr {
     display: none;
     width: 100%;
     height: 100%;
+    border-radius: 8px;
     text-align: center;
     background-color: #fad1df;
 }
@@ -187,6 +188,7 @@ hr {
     display: none;
     width: 100%;
     height: 100%;
+    border-radius: 8px;
     background-color: rgb(250 209 223 / 85%);
 }
 .loader::after {
